Renamed IVirtualBoundaryGroup to IVirtualBoundaryInput and made sure all implementors were named XXXVirtualBoundaryInput. Added handling of VBs that have null Detector list. Created IList<PhotonDatabaseWriter> and IList<CollisionInfoDatabaseWriter> in MonteCarloSimulation and associated methods to instantiate writing, writing and Disposing of dataabase writers.  These methods in new PhotonDataExtensionMethods. Added DatabaseWriterFactory to GetSurfaceVirtualBoundaries and GetVolumeVirtualBoundaries. Added VirtualBoundaryType to PhotonDatabaseWriter and CollisionInforDatabaseWriter so that writing the PhotonDataPoint to the appropropriate database is coordinated. Created "Extensions" folder in Vts.MonteCarlo and put all extension methods there. Added VirtualBoundariesExtensionMethods: IsSurfaceVB, IsVolumeVB. Entire solution builds and all unit tests passing. Still need to get Dosimetry detector working.
--HG--
branch : ch-110322-transport_of_source_restructuring

--- a/src/Vts.Desktop.Test/Vts.Desktop.Test.csproj
+++ b/src/Vts.Desktop.Test/Vts.Desktop.Test.csproj
@@ -228,9 +228,6 @@
     <Compile Include="..\Vts.Test\MonteCarlo\PhotonData\pMCDatabaseTests.cs">
       <Link>MonteCarlo\PhotonData\pMCDatabaseTests.cs</Link>
     </Compile>
-    <Compile Include="..\Vts.Test\MonteCarlo\PostProcessing\PostProcessingTests.cs">
-      <Link>MonteCarlo\PostProcessing\PostProcessingTests.cs</Link>
-    </Compile>
     <Compile Include="..\Vts.Test\MonteCarlo\Rng\SerializableMersenneTwisterTests.cs">
       <Link>MonteCarlo\Rng\SerializableMersenneTwisterTests.cs</Link>
     </Compile>
@@ -248,6 +245,9 @@
     </Compile>
     <Compile Include="..\Vts.Test\MonteCarlo\Sources\PointSources\IsotropicPointSourceTests.cs">
       <Link>MonteCarlo\Sources\PointSources\IsotropicPointSourceTests.cs</Link>
+    </Compile>
+    <Compile Include="..\Vts\MonteCarlo\PostProcessing\PhotonDatabasePostProcessor.cs">
+      <Link>MonteCarlo\PostProcessing\PhotonDatabasePostProcessor.cs</Link>
     </Compile>
     <Compile Include="FileIOTests.Desktop.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
