--- a/src/Vts/Vts.csproj
+++ b/src/Vts/Vts.csproj
@@ -170,17 +170,19 @@
     <Compile Include="MonteCarlo\DataStructures\DetectorInputs\DosimetryOfRhoDetectorInput.cs" />
     <Compile Include="MonteCarlo\DataStructures\SimulationStatistics.cs" />
     <Compile Include="MonteCarlo\DataStructures\DetectorInputs\RSpecularDetectorInput.cs" />
-    <Compile Include="MonteCarlo\DataStructures\VirtualBoundaryGroups\pMCSurfaceBoundaryGroup.cs" />
-    <Compile Include="MonteCarlo\DataStructures\VirtualBoundaryGroups\GenericVolumeGroup.cs" />
-    <Compile Include="MonteCarlo\DataStructures\VirtualBoundaryGroups\SurfaceBoundaryGroup.cs" />
+    <Compile Include="MonteCarlo\DataStructures\VirtualBoundaryInputs\pMCSurfaceVirtualBoundaryInput.cs" />
+    <Compile Include="MonteCarlo\DataStructures\VirtualBoundaryInputs\GenericVolumeVirtualBoundaryInput.cs" />
+    <Compile Include="MonteCarlo\DataStructures\VirtualBoundaryInputs\SurfaceVirtualBoundaryInput.cs" />
     <Compile Include="MonteCarlo\Detectors\DosimetryOfRhoDetector.cs" />
     <Compile Include="MonteCarlo\Detectors\RSpecularDetector.cs" />
+    <Compile Include="MonteCarlo\Factories\DatabaseWriterFactory.cs" />
     <Compile Include="MonteCarlo\Factories\VirtualBoundaryFactory.cs" />
     <Compile Include="MonteCarlo\Interfaces\IpMCSurfaceDetectorController.cs" />
     <Compile Include="MonteCarlo\Interfaces\IDetectorController.cs" />
     <Compile Include="MonteCarlo\Interfaces\IVolumeDetectorController.cs" />
-    <Compile Include="MonteCarlo\Interfaces\IVirtualBoundaryGroup.cs" />
+    <Compile Include="MonteCarlo\Interfaces\IVirtualBoundaryInput.cs" />
     <Compile Include="MonteCarlo\Interfaces\IVirtualBoundary.cs" />
+    <Compile Include="MonteCarlo\Extensions\PhotonDataExtensionMethods.cs" />
     <Compile Include="MonteCarlo\Rng\MersenneTwisterSerializationInfo.cs" />
     <Compile Include="MonteCarlo\Rng\SerializableMersenneTwister.cs" />
     <Compile Include="Factories\ComputationFactory.cs" />
@@ -266,7 +268,7 @@
     <Compile Include="MonteCarlo\DataStructuresValidation\SimulationInputValidation.cs" />
     <Compile Include="MonteCarlo\DataStructures\Output.cs" />
     <Compile Include="MonteCarlo\DataStructures\SimulationInput.cs" />
-    <Compile Include="MonteCarlo\DataStructures\SimulationInputExtensions.cs" />
+    <Compile Include="MonteCarlo\Extensions\SimulationInputExtensions.cs" />
     <Compile Include="MonteCarlo\DataStructures\SimulationOptions.cs" />
     <Compile Include="MonteCarlo\DataStructures\SourceInputs\PointSourceInputs\CustomPointSourceInput.cs" />
     <Compile Include="MonteCarlo\DataStructures\SourceInputs\PointSourceInputs\DirectionalPointSourceInput.cs" />
@@ -352,7 +354,7 @@
     <Compile Include="MonteCarlo\PhotonData\PhotonDatabaseWriter.cs" />
     <Compile Include="MonteCarlo\PhotonData\PhotonDataPointSerializer.cs" />
     <Compile Include="MonteCarlo\PhotonData\SubRegionCollisionInfo.cs" />
-    <Compile Include="MonteCarlo\PostProcessing\PhotonSurfaceBoundaryGroupDatabasePostProcessor.cs" />
+    <Compile Include="MonteCarlo\PostProcessing\PhotonDatabasePostProcessor.cs" />
     <Compile Include="Common\Extensions\RNGExtensions.cs" />
     <Compile Include="MonteCarlo\PostProcessing\PostProcessorInput.cs" />
     <Compile Include="MonteCarlo\Helpers\SourceFlags.cs" />
@@ -410,7 +412,7 @@
     <Compile Include="MonteCarlo\Detectors\ROfRhoAndTimeDetector.cs" />
     <Compile Include="MonteCarlo\Detectors\ROfRhoDetector.cs" />
     <Compile Include="MonteCarlo\Detectors\ROfXAndYDetector.cs" />
-    <Compile Include="MonteCarlo\Detectors\TallyExtensionMethods.cs" />
+    <Compile Include="MonteCarlo\Extensions\TallyExtensionMethods.cs" />
     <Compile Include="MonteCarlo\Detectors\TDiffuseDetector.cs" />
     <Compile Include="MonteCarlo\Detectors\TOfAngleDetector.cs" />
     <Compile Include="MonteCarlo\Detectors\TOfRhoAndAngleDetector.cs" />
@@ -425,7 +427,8 @@
     <Compile Include="MonteCarlo\Tissues\SingleEllipsoidTissue.cs" />
     <Compile Include="MonteCarlo\Tissues\TissueBase.cs" />
     <Compile Include="MonteCarlo\Tissues\VoxelRegion.cs" />
-    <Compile Include="MonteCarlo\StatisticsExtensions.cs" />
+    <Compile Include="MonteCarlo\Extensions\StatisticsExtensions.cs" />
+    <Compile Include="MonteCarlo\Extensions\VirtualBoundariesExtensionMethods.cs" />
     <Compile Include="MonteCarlo\VirtualBoundaries\pMCDiffuseReflectanceVirtualBoundary.cs" />
     <Compile Include="MonteCarlo\VirtualBoundaries\DosimetryVirtualBoundary.cs" />
     <Compile Include="MonteCarlo\VirtualBoundaries\DiffuseTransmittanceVirtualBoundary.cs" />
