--- a/src/Vts.Desktop.Test/Vts.Desktop.Test.csproj
+++ b/src/Vts.Desktop.Test/Vts.Desktop.Test.csproj
@@ -231,20 +231,11 @@
     <Compile Include="..\Vts.Test\MonteCarlo\Rng\SerializableMersenneTwisterTests.cs">
       <Link>MonteCarlo\Rng\SerializableMersenneTwisterTests.cs</Link>
     </Compile>
-    <Compile Include="..\Vts.Test\MonteCarlo\Sources\LineSources\CustomLineSourceTests.cs">
-      <Link>MonteCarlo\Sources\LineSources\CustomLineSourceTests.cs</Link>
+    <Compile Include="..\Vts.Test\MonteCarlo\Sources\LineSourceTests.cs">
+      <Link>MonteCarlo\Sources\LineSourceTests.cs</Link>
     </Compile>
-    <Compile Include="..\Vts.Test\MonteCarlo\Sources\LineSources\IsotropicLineSourceTests.cs">
-      <Link>MonteCarlo\Sources\LineSources\IsotropicLineSourceTests.cs</Link>
-    </Compile>
-    <Compile Include="..\Vts.Test\MonteCarlo\Sources\PointSources\CustomPointSourceTests.cs">
-      <Link>MonteCarlo\Sources\PointSources\CustomPointSourceTests.cs</Link>
-    </Compile>
-    <Compile Include="..\Vts.Test\MonteCarlo\Sources\PointSources\DirectionalPointSourceTests.cs">
-      <Link>MonteCarlo\Sources\PointSources\DirectionalPointSourceTests.cs</Link>
-    </Compile>
-    <Compile Include="..\Vts.Test\MonteCarlo\Sources\PointSources\IsotropicPointSourceTests.cs">
-      <Link>MonteCarlo\Sources\PointSources\IsotropicPointSourceTests.cs</Link>
+    <Compile Include="..\Vts.Test\MonteCarlo\Sources\PointSourceTests.cs">
+      <Link>MonteCarlo\Sources\PointSourceTests.cs</Link>
     </Compile>
     <Compile Include="..\Vts\MonteCarlo\PostProcessing\PhotonDatabasePostProcessor.cs">
       <Link>MonteCarlo\PostProcessing\PhotonDatabasePostProcessor.cs</Link>
@@ -260,14 +251,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Modeling\Optimizers\" />
-    <Folder Include="MonteCarlo\Sources\SurfaceEmittingSources\Circular\" />
-    <Folder Include="MonteCarlo\Sources\SurfaceEmittingSources\Cuboidal\" />
-    <Folder Include="MonteCarlo\Sources\SurfaceEmittingSources\CylindricalFiber\" />
-    <Folder Include="MonteCarlo\Sources\SurfaceEmittingSources\Elliptical\" />
-    <Folder Include="MonteCarlo\Sources\SurfaceEmittingSources\Rectangular\" />
-    <Folder Include="MonteCarlo\Sources\SurfaceEmittingSources\Spherical\" />
-    <Folder Include="MonteCarlo\Sources\SurfaceEmittingSources\Tubular\" />
-    <Folder Include="MonteCarlo\Sources\VolumetricSources\" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include="Microsoft.Net.Client.3.5">
