Work-around for informing DataContractSerializer of the known types. Added KnownTypes class, including RDiffuseDetector (list should be expanded). In the future, need to make more dynamic: 1) add reflection based query to populate the known types list, or 2) understand/fix the [KnownType] attribute

--- a/src/Vts.Desktop/Vts.Desktop.csproj
+++ b/src/Vts.Desktop/Vts.Desktop.csproj
@@ -259,6 +259,9 @@
     <Compile Include="..\Vts\IO\ICustomBinaryWriterOfT.cs">
       <Link>IO\ICustomBinaryWriterOfT.cs</Link>
     </Compile>
+    <Compile Include="..\Vts\IO\KnownTypes.cs">
+      <Link>IO\KnownTypes.cs</Link>
+    </Compile>
     <Compile Include="..\Vts\IO\LibraryIO.cs">
       <Link>IO\LibraryIO.cs</Link>
     </Compile>
