Added a DatabaseWriterController and pMCDatabaseWriterController.  Moved methods WriteToSurfaceVirtualBoundaryDatabase and Dispose to controller. Modified MonteCarloSimulation to utilize new controllers. Add VB extension method to determine if VBType is pMC type or not.

--- a/src/Vts.Desktop.Test/Vts.Desktop.Test.csproj
+++ b/src/Vts.Desktop.Test/Vts.Desktop.Test.csproj
@@ -198,6 +198,9 @@
     <Compile Include="..\Vts.Test\MonteCarlo\DataStructures\SimulationOptionsTests.cs">
       <Link>MonteCarlo\DataStructures\SimulationOptionsTests.cs</Link>
     </Compile>
+    <Compile Include="..\Vts.Test\MonteCarlo\DataStructures\SourceInputs\PointSourceInputs\IsotropicPointSourceInputTests.cs">
+      <Link>MonteCarlo\DataStructures\SourceInputs\PointSourceInputs\IsotropicPointSourceInputTests.cs</Link>
+    </Compile>
     <Compile Include="..\Vts.Test\MonteCarlo\Detectors\AnalogDetectorsTests.cs">
       <Link>MonteCarlo\Detectors\AnalogDetectorsTests.cs</Link>
     </Compile>
