Moved PostProcessorInput to DataStructures. Performed a first pass on PostProcessor application to have code similar to MC CommandLine app. Added pMCPostProcessorInput and PhotonDatabaseFactory back into solution. Still much to do to get PP working.  Just first cut for now.

--- a/src/Vts.MonteCarlo.PostProcessor/Vts.MonteCarlo.PostProcessor.csproj
+++ b/src/Vts.MonteCarlo.PostProcessor/Vts.MonteCarlo.PostProcessor.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="PostProcessorSetup.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -56,7 +57,7 @@
     <None Include="app.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="newinfile.xml" />
+    <Content Include="infile.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
