--- a/src/Vts.Desktop/Vts.Desktop.csproj
+++ b/src/Vts.Desktop/Vts.Desktop.csproj
@@ -475,6 +475,9 @@
     <Compile Include="..\Vts\MonteCarlo\Controllers\VolumeDetectorController.cs">
       <Link>MonteCarlo\Controllers\VolumeDetectorController.cs</Link>
     </Compile>
+    <Compile Include="..\Vts\MonteCarlo\DataStructuresValidation\PostProcessorInputs\PostProcessorInputValidation.cs">
+      <Link>MonteCarlo\DataStructuresValidation\PostProcessorInputs\PostProcessorInputValidation.cs</Link>
+    </Compile>
     <Compile Include="..\Vts\MonteCarlo\DataStructuresValidation\SimulationInputValidation.cs">
       <Link>MonteCarlo\DataStructuresValidation\SimulationInputValidation.cs</Link>
     </Compile>
@@ -552,6 +555,12 @@
     </Compile>
     <Compile Include="..\Vts\MonteCarlo\DataStructures\Output.cs">
       <Link>MonteCarlo\DataStructures\Output.cs</Link>
+    </Compile>
+    <Compile Include="..\Vts\MonteCarlo\DataStructures\PostProcessorInputs\pMCPostProcessorInput.cs">
+      <Link>MonteCarlo\DataStructures\PostProcessorInputs\pMCPostProcessorInput.cs</Link>
+    </Compile>
+    <Compile Include="..\Vts\MonteCarlo\DataStructures\PostProcessorInputs\PostProcessorInput.cs">
+      <Link>MonteCarlo\DataStructures\PostProcessorInputs\PostProcessorInput.cs</Link>
     </Compile>
     <Compile Include="..\Vts\MonteCarlo\DataStructures\SimulationInput.cs">
       <Link>MonteCarlo\DataStructures\SimulationInput.cs</Link>
@@ -733,6 +742,9 @@
     <Compile Include="..\Vts\MonteCarlo\Factories\DetectorFactory.cs">
       <Link>MonteCarlo\Factories\DetectorFactory.cs</Link>
     </Compile>
+    <Compile Include="..\Vts\MonteCarlo\Factories\PhotonDatabaseFactory.cs">
+      <Link>MonteCarlo\Factories\PhotonDatabaseFactory.cs</Link>
+    </Compile>
     <Compile Include="..\Vts\MonteCarlo\Factories\RandomNumberGeneratorFactory.cs">
       <Link>MonteCarlo\Factories\RandomNumberGeneratorFactory.cs</Link>
     </Compile>
@@ -882,9 +894,6 @@
     </Compile>
     <Compile Include="..\Vts\MonteCarlo\PostProcessing\PhotonDatabasePostProcessor.cs">
       <Link>MonteCarlo\PostProcessing\PhotonDatabasePostProcessor.cs</Link>
-    </Compile>
-    <Compile Include="..\Vts\MonteCarlo\PostProcessing\PostProcessorInput.cs">
-      <Link>MonteCarlo\PostProcessing\PostProcessorInput.cs</Link>
     </Compile>
     <Compile Include="..\Vts\MonteCarlo\Rng\MersenneTwisterSerializationInfo.cs">
       <Link>MonteCarlo\Rng\MersenneTwisterSerializationInfo.cs</Link>
