Modifications to get pMC in PostProcessor application to work. Added example CommandLineApplication infile to support creating pMC database. Had to modify MCSimulation to handle processing pMC databases versus regular, code is not its best, had to add "if, else" in 3 places.  May need to rework. Added example PP infile to support reading pMC database.

--- a/src/Vts.MonteCarlo.CommandLineApplication/Vts.MonteCarlo.CommandLineApplication.csproj
+++ b/src/Vts.MonteCarlo.CommandLineApplication/Vts.MonteCarlo.CommandLineApplication.csproj
@@ -111,6 +111,7 @@
     <Content Include="infile_database.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="infile_pMC_database.xml" />
     <Content Include="infile_ROfRho.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
