--- a/lib/Meta.Numerics/src/Core/Core.csproj
+++ b/lib/Meta.Numerics/src/Core/Core.csproj
@@ -100,7 +100,7 @@
   </Target>
   -->
   <PropertyGroup>
-    <PostBuildEvent>IF NOT EXIST "$(SolutionDir)..\build\Desktop\" (mkdir "$(SolutionDir)..\build\Desktop\")
+    <PostBuildEvent Condition=" '$(OS)' == 'Windows_NT' ">IF NOT EXIST "$(SolutionDir)..\build\Desktop\" (mkdir "$(SolutionDir)..\build\Desktop\")
 copy "$(TargetDir)\*.*" "$(SolutionDir)..\build\Desktop\"</PostBuildEvent>
   </PropertyGroup>
 </Project>
