--- a/lib/mpfit/src/MPFitLib/MPFitLib.csproj
+++ b/lib/mpfit/src/MPFitLib/MPFitLib.csproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="3.5" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -74,7 +74,7 @@
   </Target>
   -->
   <PropertyGroup>
-    <PostBuildEvent>IF NOT EXIST "$(SolutionDir)..\build\Desktop\" (mkdir "$(SolutionDir)..\build\Desktop\")
+    <PostBuildEvent Condition=" '$(OS)' == 'Windows_NT' ">IF NOT EXIST "$(SolutionDir)..\build\Desktop\" (mkdir "$(SolutionDir)..\build\Desktop\")
 copy "$(TargetDir)\*.*" "$(SolutionDir)..\build\Desktop\"</PostBuildEvent>
   </PropertyGroup>
 </Project>
