--- a/src/Vts.Database/Vts.Database.csproj
+++ b/src/Vts.Database/Vts.Database.csproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup Condition="'$(MSBuildToolsVersion)' == '3.5'">
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
@@ -130,7 +130,7 @@
     </VisualStudio>
   </ProjectExtensions>
   <PropertyGroup>
-    <PostBuildEvent>IF NOT EXIST "$(SolutionDir)..\build\libraries\$(ConfigurationName)\" mkdir "$(SolutionDir)..\build\libraries\$(ConfigurationName)\"
+    <PostBuildEvent Condition=" '$(OS)' == 'Windows_NT' ">IF NOT EXIST "$(SolutionDir)..\build\libraries\$(ConfigurationName)\" mkdir "$(SolutionDir)..\build\libraries\$(ConfigurationName)\"
 copy "$(TargetDir)*.*" "$(SolutionDir)..\build\libraries\$(ConfigurationName)\" /y</PostBuildEvent>
   </PropertyGroup>
 </Project>
