--- a/src/Vts.SiteVisit/Vts.SiteVisit.csproj
+++ b/src/Vts.SiteVisit/Vts.SiteVisit.csproj
@@ -464,6 +464,7 @@
     <EmbeddedResource Include="Resources\Strings.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>Strings.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
