--- a/src/Vts/Vts.csproj
+++ b/src/Vts/Vts.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup Condition="'$(MSBuildToolsVersion)' == '3.5'">
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
@@ -258,7 +258,6 @@
     <Compile Include="Modeling\Spectroscopy\ChromophoreAbsorber.cs" />
     <Compile Include="Modeling\Spectroscopy\ChromophoreSpectrum.cs" />
     <Compile Include="Modeling\Spectroscopy\ChromophoreSpectrumUnitConverter.cs" />
-    <Compile Include="Modeling\Spectroscopy\Enums.cs" />
     <Compile Include="Modeling\Spectroscopy\IAbsorber.cs" />
     <Compile Include="Modeling\Spectroscopy\IChromophoreAbsorber.cs" />
     <Compile Include="Modeling\Spectroscopy\IntralipidScatterer.cs" />
