Removed the link to Enums.cs from Vts.Desktop Added XML comments for IAbsorber.cs

--- a/src/Vts.Desktop/Vts.Desktop.csproj
+++ b/src/Vts.Desktop/Vts.Desktop.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -417,9 +417,6 @@
     </Compile>
     <Compile Include="..\Vts\Modeling\Spectroscopy\ChromophoreSpectrumUnitConverter.cs">
       <Link>Modeling\Spectroscopy\ChromophoreSpectrumUnitConverter.cs</Link>
-    </Compile>
-    <Compile Include="..\Vts\Modeling\Spectroscopy\Enums.cs">
-      <Link>Modeling\Spectroscopy\Enums.cs</Link>
     </Compile>
     <Compile Include="..\Vts\Modeling\Spectroscopy\IAbsorber.cs">
       <Link>Modeling\Spectroscopy\IAbsorber.cs</Link>
