--- a/src/Vts/Vts.csproj
+++ b/src/Vts/Vts.csproj
@@ -178,6 +178,9 @@
     <Compile Include="MonteCarlo\DataStructures\PostProcessorInputs\PostProcessorInput.cs" />
     <Compile Include="MonteCarlo\DataStructures\SimulationStatistics.cs" />
     <Compile Include="MonteCarlo\DataStructures\DetectorInputs\RSpecularDetectorInput.cs" />
+    <Compile Include="MonteCarlo\DataStructures\SourceInputs\PointAndLineSources\LineSourceInputs\CustomLineSourceInput.cs" />
+    <Compile Include="MonteCarlo\DataStructures\SourceInputs\PointAndLineSources\LineSourceInputs\DirectionalLineSourceInput.cs" />
+    <Compile Include="MonteCarlo\DataStructures\SourceInputs\PointAndLineSources\LineSourceInputs\IsotropicLineSourceInput.cs" />
     <Compile Include="MonteCarlo\DataStructures\VirtualBoundaryInputs\pMCSurfaceVirtualBoundaryInput.cs" />
     <Compile Include="MonteCarlo\DataStructures\VirtualBoundaryInputs\GenericVolumeVirtualBoundaryInput.cs" />
     <Compile Include="MonteCarlo\DataStructures\VirtualBoundaryInputs\SurfaceVirtualBoundaryInput.cs" />
@@ -269,9 +272,6 @@
     <Compile Include="Modeling\Spectroscopy\Tissue.cs" />
     <Compile Include="Modeling\Tools\CalculatorToolbox.cs" />
     <Compile Include="Modeling\Tools\HankelTransform.cs" />
-    <Compile Include="MonteCarlo\DataStructures\SourceInputs\LineSourceInputs\IsotropicLineSourceInput.cs" />
-    <Compile Include="MonteCarlo\DataStructures\SourceInputs\LineSourceInputs\CustomLineSourceInput.cs" />
-    <Compile Include="MonteCarlo\DataStructures\SourceInputs\LineSourceInputs\DirectionalLineSourceInput.cs" />
     <Compile Include="MonteCarlo\DataStructuresValidation\TissueInputs\MultiLayerTissueInputValidation.cs" />
     <Compile Include="MonteCarlo\DataStructuresValidation\ValidationResult.cs" />
     <Compile Include="MonteCarlo\DataStructuresValidation\SimulationInputValidation.cs" />
@@ -279,8 +279,8 @@
     <Compile Include="MonteCarlo\DataStructures\SimulationInput.cs" />
     <Compile Include="MonteCarlo\Extensions\SimulationInputExtensions.cs" />
     <Compile Include="MonteCarlo\DataStructures\SimulationOptions.cs" />
-    <Compile Include="MonteCarlo\DataStructures\SourceInputs\PointSourceInputs\CustomPointSourceInput.cs" />
-    <Compile Include="MonteCarlo\DataStructures\SourceInputs\PointSourceInputs\DirectionalPointSourceInput.cs" />
+    <Compile Include="MonteCarlo\DataStructures\SourceInputs\PointAndLineSources\PointSourceInputs\CustomPointSourceInput.cs" />
+    <Compile Include="MonteCarlo\DataStructures\SourceInputs\PointAndLineSources\PointSourceInputs\DirectionalPointSourceInput.cs" />
     <Compile Include="MonteCarlo\DataStructures\DetectorInputs\AOfRhoAndZDetectorInput.cs" />
     <Compile Include="MonteCarlo\DataStructures\DetectorInputs\ATotalDetectorInput.cs" />
     <Compile Include="MonteCarlo\DataStructures\DetectorInputs\pMCROfRhoAndTimeDetectorInput.cs" />
@@ -298,23 +298,23 @@
     <Compile Include="MonteCarlo\DataStructures\DetectorInputs\FluenceOfRhoAndZDetectorInput.cs" />
     <Compile Include="MonteCarlo\Controllers\SurfaceDetectorController.cs" />
     <Compile Include="MonteCarlo\Controllers\pMCSurfaceDetectorController.cs" />
-    <Compile Include="MonteCarlo\DataStructures\SourceInputs\PointSourceInputs\IsotropicPointSourceInput.cs" />
-    <Compile Include="MonteCarlo\DataStructures\SourceInputs\SurfaceEmittingSources\CircularSourceInputs\CustomCircularSourceInput.cs" />
-    <Compile Include="MonteCarlo\DataStructures\SourceInputs\SurfaceEmittingSources\CircularSourceInputs\DirectionalCircularSourceInput.cs" />
-    <Compile Include="MonteCarlo\DataStructures\SourceInputs\SurfaceEmittingSources\CuboidalSourceInputs\CustomSurfaceEmittingCuboidalSourceInput.cs" />
-    <Compile Include="MonteCarlo\DataStructures\SourceInputs\SurfaceEmittingSources\CuboidalSourceInputs\LambertianSurfaceEmittingCuboidalSourceInput.cs" />
-    <Compile Include="MonteCarlo\DataStructures\SourceInputs\SurfaceEmittingSources\CylindricalFiberSourceInputs\LambertianSurfaceEmittingTubularSourceInput.cs" />
-    <Compile Include="MonteCarlo\DataStructures\SourceInputs\SurfaceEmittingSources\EllipticalSourceInputs\CustomEllipticalSourceInput.cs" />
-    <Compile Include="MonteCarlo\DataStructures\SourceInputs\SurfaceEmittingSources\EllipticalSourceInputs\DirectionalEllipticalSourceInput.cs" />
-    <Compile Include="MonteCarlo\DataStructures\SourceInputs\SurfaceEmittingSources\RectangularSourceInputs\CustomRectangularSourceInput.cs" />
-    <Compile Include="MonteCarlo\DataStructures\SourceInputs\SurfaceEmittingSources\RectangularSourceInputs\DirectionalRectangularSourceInput.cs" />
-    <Compile Include="MonteCarlo\DataStructures\SourceInputs\SurfaceEmittingSources\SphericalSourceInputs\CustomSurfaceEmittingSphericalSourceInput.cs" />
-    <Compile Include="MonteCarlo\DataStructures\SourceInputs\SurfaceEmittingSources\SphericalSourceInputs\LambertianSurfaceEmittingCuboidalSourceInput.cs" />
-    <Compile Include="MonteCarlo\DataStructures\SourceInputs\SurfaceEmittingSources\TubularSourceInputs\LambertianSurfaceEmittingTubularSourceInput.cs" />
-    <Compile Include="MonteCarlo\DataStructures\SourceInputs\VolumetricSources\IsotropicVolumetricEllipsoidalSourceInput.cs" />
-    <Compile Include="MonteCarlo\DataStructures\SourceInputs\VolumetricSources\CustomVolumetricCuboidaldalSourceInput.cs" />
-    <Compile Include="MonteCarlo\DataStructures\SourceInputs\VolumetricSources\IsotropicVolumetricCuboidaldalSourceInput.cs" />
-    <Compile Include="MonteCarlo\DataStructures\SourceInputs\VolumetricSources\CustomVolumetricEllipsoidalSourceInput.cs" />
+    <Compile Include="MonteCarlo\DataStructures\SourceInputs\PointAndLineSources\PointSourceInputs\IsotropicPointSourceInput.cs" />
+    <Compile Include="MonteCarlo\DataStructures\SourceInputs\SurfaceEmittingFlatSources\CircularSourceInputs\CustomCircularSourceInput.cs" />
+    <Compile Include="MonteCarlo\DataStructures\SourceInputs\SurfaceEmittingFlatSources\CircularSourceInputs\DirectionalCircularSourceInput.cs" />
+    <Compile Include="MonteCarlo\DataStructures\SourceInputs\SurfaceEmittingBulkSources\SurfaceEmittingCuboidalSourceInputs\CustomSurfaceEmittingCuboidalSourceInput.cs" />
+    <Compile Include="MonteCarlo\DataStructures\SourceInputs\SurfaceEmittingBulkSources\SurfaceEmittingCuboidalSourceInputs\LambertianSurfaceEmittingCuboidalSourceInput.cs" />
+    <Compile Include="MonteCarlo\DataStructures\SourceInputs\SurfaceEmittingBulkSources\CylindricalFiberSourceInputs\LambertianSurfaceEmittingTubularSourceInput.cs" />
+    <Compile Include="MonteCarlo\DataStructures\SourceInputs\SurfaceEmittingFlatSources\EllipticalSourceInputs\CustomEllipticalSourceInput.cs" />
+    <Compile Include="MonteCarlo\DataStructures\SourceInputs\SurfaceEmittingFlatSources\EllipticalSourceInputs\DirectionalEllipticalSourceInput.cs" />
+    <Compile Include="MonteCarlo\DataStructures\SourceInputs\SurfaceEmittingFlatSources\RectangularSourceInputs\CustomRectangularSourceInput.cs" />
+    <Compile Include="MonteCarlo\DataStructures\SourceInputs\SurfaceEmittingFlatSources\RectangularSourceInputs\DirectionalRectangularSourceInput.cs" />
+    <Compile Include="MonteCarlo\DataStructures\SourceInputs\SurfaceEmittingBulkSources\SphericalSourceInputs\CustomSurfaceEmittingSphericalSourceInput.cs" />
+    <Compile Include="MonteCarlo\DataStructures\SourceInputs\SurfaceEmittingBulkSources\SphericalSourceInputs\LambertianSurfaceEmittingCuboidalSourceInput.cs" />
+    <Compile Include="MonteCarlo\DataStructures\SourceInputs\SurfaceEmittingBulkSources\TubularSourceInputs\LambertianSurfaceEmittingTubularSourceInput.cs" />
+    <Compile Include="MonteCarlo\DataStructures\SourceInputs\VolumetricSources\EllipsoidalSourceInputs\IsotropicVolumetricEllipsoidalSourceInput.cs" />
+    <Compile Include="MonteCarlo\DataStructures\SourceInputs\VolumetricSources\VolumetricCuboidalSourceInputs\CustomVolumetricCuboidaldalSourceInput.cs" />
+    <Compile Include="MonteCarlo\DataStructures\SourceInputs\VolumetricSources\VolumetricCuboidalSourceInputs\IsotropicVolumetricCuboidaldalSourceInput.cs" />
+    <Compile Include="MonteCarlo\DataStructures\SourceInputs\VolumetricSources\EllipsoidalSourceInputs\CustomVolumetricEllipsoidalSourceInput.cs" />
     <Compile Include="MonteCarlo\Factories\AbsorptionActionFactory.cs" />
     <Compile Include="MonteCarlo\Factories\DetectorControllerFactory.cs" />
     <Compile Include="MonteCarlo\Factories\SourceProfileFactory.cs" />
@@ -366,46 +366,46 @@
     <Compile Include="MonteCarlo\PostProcessing\PhotonDatabasePostProcessor.cs" />
     <Compile Include="Common\Extensions\RNGExtensions.cs" />
     <Compile Include="MonteCarlo\Helpers\SourceFlags.cs" />
-    <Compile Include="MonteCarlo\Sources\SourceDefaults.cs">
+    <Compile Include="MonteCarlo\Helpers\SourceDefaults.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="MonteCarlo\Sources\SurfaceEmittingSources\Circular\CircularSourceBase.cs" />
-    <Compile Include="MonteCarlo\Sources\SurfaceEmittingSources\Circular\CustomCircularSource.cs" />
-    <Compile Include="MonteCarlo\Sources\SurfaceEmittingSources\Circular\DirectionalCircularSource.cs" />
-    <Compile Include="MonteCarlo\Sources\SurfaceEmittingSources\CylindricalFiber\LambertianSurfaceEmittingCylindricalFiberSource.cs" />
-    <Compile Include="MonteCarlo\Sources\SurfaceEmittingSources\CylindricalFiber\SurfaceEmittingCylindricalFiberSourceBase.cs" />
-    <Compile Include="MonteCarlo\Sources\SurfaceEmittingSources\Elliptical\EllipticalSourceBase.cs" />
-    <Compile Include="MonteCarlo\Sources\SurfaceEmittingSources\Elliptical\DirectionalEllipticalSource.cs" />
-    <Compile Include="MonteCarlo\Sources\SurfaceEmittingSources\Elliptical\CustomEllipticalSource.cs" />
-    <Compile Include="MonteCarlo\Sources\LineSources\IsotropicLineSource.cs" />
-    <Compile Include="MonteCarlo\Sources\LineSources\LineSourceBase.cs" />
-    <Compile Include="MonteCarlo\Sources\LineSources\DirectionalLineSource.cs" />
-    <Compile Include="MonteCarlo\Sources\LineSources\CustomLineSource.cs" />
-    <Compile Include="MonteCarlo\Sources\PointSources\PointSourceBase.cs" />
-    <Compile Include="MonteCarlo\Sources\PointSources\DirectionalPointSource.cs" />
-    <Compile Include="MonteCarlo\Sources\PointSources\CustomPointSource.cs">
+    <Compile Include="MonteCarlo\Sources\SurfaceEmittingFlatSources\Circular\CircularSourceBase.cs" />
+    <Compile Include="MonteCarlo\Sources\SurfaceEmittingFlatSources\Circular\CustomCircularSource.cs" />
+    <Compile Include="MonteCarlo\Sources\SurfaceEmittingFlatSources\Circular\DirectionalCircularSource.cs" />
+    <Compile Include="MonteCarlo\Sources\SurfaceEmittingBulkSources\CylindricalFiber\LambertianSurfaceEmittingCylindricalFiberSource.cs" />
+    <Compile Include="MonteCarlo\Sources\SurfaceEmittingBulkSources\CylindricalFiber\SurfaceEmittingCylindricalFiberSourceBase.cs" />
+    <Compile Include="MonteCarlo\Sources\SurfaceEmittingFlatSources\Elliptical\EllipticalSourceBase.cs" />
+    <Compile Include="MonteCarlo\Sources\SurfaceEmittingFlatSources\Elliptical\DirectionalEllipticalSource.cs" />
+    <Compile Include="MonteCarlo\Sources\SurfaceEmittingFlatSources\Elliptical\CustomEllipticalSource.cs" />
+    <Compile Include="MonteCarlo\Sources\PointAndLineSources\LineSources\IsotropicLineSource.cs" />
+    <Compile Include="MonteCarlo\Sources\PointAndLineSources\LineSources\LineSourceBase.cs" />
+    <Compile Include="MonteCarlo\Sources\PointAndLineSources\LineSources\DirectionalLineSource.cs" />
+    <Compile Include="MonteCarlo\Sources\PointAndLineSources\LineSources\CustomLineSource.cs" />
+    <Compile Include="MonteCarlo\Sources\PointAndLineSources\PointSources\PointSourceBase.cs" />
+    <Compile Include="MonteCarlo\Sources\PointAndLineSources\PointSources\DirectionalPointSource.cs" />
+    <Compile Include="MonteCarlo\Sources\PointAndLineSources\PointSources\CustomPointSource.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="MonteCarlo\Sources\PointSources\IsotropicPointSource.cs" />
-    <Compile Include="MonteCarlo\Sources\SurfaceEmittingSources\Tubular\LambertianSurfaceEmittingTubularSource.cs" />
-    <Compile Include="MonteCarlo\Sources\SurfaceEmittingSources\Tubular\SurfaceEmittingTubularSourceBase.cs" />
-    <Compile Include="MonteCarlo\Sources\SurfaceEmittingSources\Cuboidal\SurfaceEmittingCuboidalSourceBase.cs" />
-    <Compile Include="MonteCarlo\Sources\SurfaceEmittingSources\Cuboidal\CustomSurfaceEmittingCuboidalSource.cs" />
-    <Compile Include="MonteCarlo\Sources\SurfaceEmittingSources\Cuboidal\LambertianSurfaceEmittingCuboidalSource.cs" />
-    <Compile Include="MonteCarlo\Sources\SurfaceEmittingSources\Rectangular\RectangularSourceBase.cs" />
-    <Compile Include="MonteCarlo\Sources\SurfaceEmittingSources\Rectangular\DirectionalRectangularSource.cs" />
-    <Compile Include="MonteCarlo\Sources\SurfaceEmittingSources\Rectangular\CustomRectangularSource.cs" />
+    <Compile Include="MonteCarlo\Sources\PointAndLineSources\PointSources\IsotropicPointSource.cs" />
+    <Compile Include="MonteCarlo\Sources\SurfaceEmittingBulkSources\Tubular\LambertianSurfaceEmittingTubularSource.cs" />
+    <Compile Include="MonteCarlo\Sources\SurfaceEmittingBulkSources\Tubular\SurfaceEmittingTubularSourceBase.cs" />
+    <Compile Include="MonteCarlo\Sources\SurfaceEmittingBulkSources\SurfaceEmittingCuboidal\SurfaceEmittingCuboidalSourceBase.cs" />
+    <Compile Include="MonteCarlo\Sources\SurfaceEmittingBulkSources\SurfaceEmittingCuboidal\CustomSurfaceEmittingCuboidalSource.cs" />
+    <Compile Include="MonteCarlo\Sources\SurfaceEmittingBulkSources\SurfaceEmittingCuboidal\LambertianSurfaceEmittingCuboidalSource.cs" />
+    <Compile Include="MonteCarlo\Sources\SurfaceEmittingFlatSources\Rectangular\RectangularSourceBase.cs" />
+    <Compile Include="MonteCarlo\Sources\SurfaceEmittingFlatSources\Rectangular\DirectionalRectangularSource.cs" />
+    <Compile Include="MonteCarlo\Sources\SurfaceEmittingFlatSources\Rectangular\CustomRectangularSource.cs" />
     <Compile Include="MonteCarlo\Helpers\SourceToolbox.cs" />
     <Compile Include="MonteCarlo\Sources\SourceProfiles\GaussianSourceProfile.cs" />
     <Compile Include="MonteCarlo\Sources\SourceProfiles\FlatSourceProfile.cs" />
-    <Compile Include="MonteCarlo\Sources\SurfaceEmittingSources\Spherical\SurfaceEmittingSphericalSourceBase.cs" />
-    <Compile Include="MonteCarlo\Sources\SurfaceEmittingSources\Spherical\LambertianSurfaceEmittingSphericalSource.cs" />
-    <Compile Include="MonteCarlo\Sources\VolumetricSources\CustomVolumetricCuboidalSource.cs" />
-    <Compile Include="MonteCarlo\Sources\VolumetricSources\IsotropicVolumetricEllipsoidalSource.cs" />
-    <Compile Include="MonteCarlo\Sources\VolumetricSources\VolumetricCuboidalSourceBase.cs" />
-    <Compile Include="MonteCarlo\Sources\VolumetricSources\IsotropicVolumetricCuboidalSource.cs" />
-    <Compile Include="MonteCarlo\Sources\VolumetricSources\VolumetricEllipsoidalSourceBase.cs" />
-    <Compile Include="MonteCarlo\Sources\VolumetricSources\CustomVolumetricEllipsoidalSource.cs" />
+    <Compile Include="MonteCarlo\Sources\SurfaceEmittingBulkSources\Spherical\SurfaceEmittingSphericalSourceBase.cs" />
+    <Compile Include="MonteCarlo\Sources\SurfaceEmittingBulkSources\Spherical\LambertianSurfaceEmittingSphericalSource.cs" />
+    <Compile Include="MonteCarlo\Sources\VolumetricSources\VolumtricCuboidal\CustomVolumetricCuboidalSource.cs" />
+    <Compile Include="MonteCarlo\Sources\VolumetricSources\Ellipsoidal\IsotropicVolumetricEllipsoidalSource.cs" />
+    <Compile Include="MonteCarlo\Sources\VolumetricSources\VolumtricCuboidal\VolumetricCuboidalSourceBase.cs" />
+    <Compile Include="MonteCarlo\Sources\VolumetricSources\VolumtricCuboidal\IsotropicVolumetricCuboidalSource.cs" />
+    <Compile Include="MonteCarlo\Sources\VolumetricSources\Ellipsoidal\VolumetricEllipsoidalSourceBase.cs" />
+    <Compile Include="MonteCarlo\Sources\VolumetricSources\Ellipsoidal\CustomVolumetricEllipsoidalSource.cs" />
     <Compile Include="MonteCarlo\Detectors\AOfRhoAndZDetector.cs" />
     <Compile Include="MonteCarlo\Detectors\ATotalDetector.cs" />
     <Compile Include="MonteCarlo\Detectors\FluenceOfRhoAndZAndTimeDetector.cs" />
@@ -425,7 +425,7 @@
     <Compile Include="MonteCarlo\Detectors\TOfAngleDetector.cs" />
     <Compile Include="MonteCarlo\Detectors\TOfRhoAndAngleDetector.cs" />
     <Compile Include="MonteCarlo\Detectors\TOfRhoDetector.cs" />
-    <Compile Include="MonteCarlo\Sources\SurfaceEmittingSources\Spherical\CustomSurfaceEmittingSphericalSource.cs" />
+    <Compile Include="MonteCarlo\Sources\SurfaceEmittingBulkSources\Spherical\CustomSurfaceEmittingSphericalSource.cs" />
     <Compile Include="MonteCarlo\Tissues\CylinderRegion.cs" />
     <Compile Include="MonteCarlo\Tissues\EllipsoidRegion.cs" />
     <Compile Include="MonteCarlo\Tissues\LayerRegion.cs" />
